...
            Text(text = stringResource(Res.string.dialog_confirm))
        }
    }
}

internal object UnlockSuccessTestTags {
    const val TITLE = "UnlockSuccess_Title"
    const val DESC = "UnlockSuccess_Desc"
    const val FINISH_BUTTON = "UnlockSuccess_FinishButton"
}

@InternalApi
@Composable
private fun UnlockSuccessScreenPreviewContent() {
...
