...
    const val PHONE_INPUT = "LoginByPhone_PhoneInput"
    const val SEND_CODE_BUTTON = "LoginByPhone_SendCodeButton"
    const val PHONE_STEP_ERROR_TEXT = "LoginByPhone_PhoneStepErrorText"

    const val CODE_STEP_TITLE = "LoginByPhone_CodeStepTitle"
    const val CODE_SENT_INFO_TEXT = "LoginByPhone_CodeSentInfoText"
    const val CODE_INPUT = "LoginByPhone_CodeInput"
    const val CONFIRM_BUTTON = "LoginByPhone_ConfirmButton"
    const val CHANGE_PHONE_BUTTON = "LoginByPhone_ChangePhoneButton"
    const val RESEND_TIMER_TEXT = "LoginByPhone_ResendTimerText"
    const val RESEND_CODE_BUTTON = "LoginByPhone_ResendCodeButton"
    const val CODE_STEP_ERROR_TEXT = "LoginByPhone_CodeStepErrorText"
}

